chore: updates socials

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>Habeeb</title>
     <!-- Favicon -->
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
     <!-- Font Awesome icons -->
@@ -22,45 +22,32 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="https://media-exp1.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1674691200&v=beta&t=lboHQqAQlDG9OUuroaPCN8fm8JJFBNSYCmC4xKC7bwY" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+          <a href="https://media-exp1.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1674691200&v=beta&t=lboHQqAQlDG9OUuroaPCN8fm8JJFBNSYCmC4xKC7bwY" target="_blank">
+            <img src="https://media-exp1.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1674691200&v=beta&t=lboHQqAQlDG9OUuroaPCN8fm8JJFBNSYCmC4xKC7bwY" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
+        I edit text files with fancy colors :) 
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
-    <div id="userName">
-      @johnggli
-    </div>
-
     <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
+      <a class="link" href="https://github.com/hb1998" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
+      <a class="link" href="https://www.linkedin.com/in/habeebur-rahman-3639b3139/" target="_blank">
         <i class="fab fa-linkedin">&nbsp;</i>Linkedin
       </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
+      <a class="link" href="https://twitter.com/habeeb196" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
       </a>
     </div>
 
