--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habeeb</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="https://media-exp1.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1674691200&v=beta&t=lboHQqAQlDG9OUuroaPCN8fm8JJFBNSYCmC4xKC7bwY" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
