--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://media-exp1.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1674691200&v=beta&t=lboHQqAQlDG9OUuroaPCN8fm8JJFBNSYCmC4xKC7bwY" alt="Profile Picture">
+      <img src="https://media.licdn.com/dms/image/D5603AQHCYq4Wcs-uPQ/profile-displayphoto-shrink_800_800/0/1666953387699?e=1700697600&v=beta&t=pXDZP4bsz3tXsTaW_36d9Ga6kEbxQGrCFmtanO5mBaU" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
